--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
+    "web": {
+        "port": 3000
+    },
     "mongodb": {
         "url": "mongodb://localhost:27017",
         "dbName": "test"
